Bug 1382433 - use fixed fps instead of floating fps to avoid very low fps. r=jib

MozReview-Commit-ID: 2QUWJM2LNkK

--HG--
extra : rebase_source : 5e323539c0d600979726d552938c9f06ed5cf5e2