media/webrtc/trunk/webrtc/modules/video_capture/mac/avfoundation/video_capture_avfoundation_objc.mm
@@ -152,7 +152,7 @@ using namespace videocapturemodule;
     }
 
     if ([captureConnection isVideoMaxFrameDurationSupported]) {
-      [captureConnection setVideoMaxFrameDuration:bestFrameRateRange.maxFrameDuration];
+      [captureConnection setVideoMaxFrameDuration:bestFrameRateRange.minFrameDuration];
     }
   }
 }
